# RoutePlanner

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
controllers/: configuration.py  dashboard.py  export.py  graphs.py  history.py  index.py  locations.py  routes.py  users.py
docs/: technical_report.md
migrations/versions/: 1c86635afd9e_.py  77e234cddcf8_.py  7ba6d6be0321_.py  ecab7f4d0937_.py
models/: __init__.py  api_storage.py  locations.py  routes.py  users.py
routers/: __init__.py  configuration.py  dashboard.py  graphs.py  history.py  index.py  locations.py  routes.py  users.py
static/js/: index.js
static/styles/: index.css
templates/: base.html  index.html
templates/configuration/: error.html  index.html  login.html
templates/history/: index.html
templates/locations/: index.html
templates/map/: base.html  dashboard.html
templates/public/: about.html  base.html  index.html  terms.html
templates/users/: base.html  signin.html  signup.html  update.html
templates/usuarios/: index.html
test/: create_admin.py  test_configuration_auth.py  test_user_management.py  verify_endpoints.py  verify_graph.py  verify_locations.py  verify_unique_user.py  verify_users.py
utils/: auth.py  encryption.py
