[project]
name = "jaag-maps"
version = "0.1.0"
description = "Little projecto develop on my programming class"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "cryptography>=44.0.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]
